# ts-runtime-typechecker

./: .gitignore  Cargo.toml  README.md  dbg.ts  package-lock.json  package.json  result.js  result.ts  rustfmt.toml  test.ts
npm/: getBinary.js  run.js  scripts.js
src/: cmd.rs  inter_parser.rs  js.rs  lexer.rs  macros.rs  main.rs  parsers.rs  tests.rs
