[package]
name = "ts-runtime-typechecker"
version = "0.1.1"
authors = ["ManiGhazaee <hosseinghazaee1@gmail.com>"]
edition = "2021"
description = "A command line tool that generates ts/js typechecker functions from typescript types"
license = "GPL-3.0"
exclude = ["/npm", "package.json", "package-lock.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
